--- a/.github/workflows/sanitycheck.yml
+++ b/.github/workflows/sanitycheck.yml
@@ -1,8 +1,6 @@
 name: Sanity check
 
-on: [push, pull_request]
-# I doubt this makes sense for PRs, as the workflow is downloading the version
-# already merged into the base branch, not the current code being merged.
+on: pull_request
 
 jobs:
   sanity-check:
@@ -11,22 +9,11 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: alire-project/setup-alire@latest-stable
-        if: >
-          contains(github.base_ref, 'latest-stable') || 
-          contains(github.ref, 'latest-stable')
-
       # setup-alire@latest-devel requires a GNAT compiler
       - uses: ada-actions/toolchain@ce2020
-        if: >
-          contains(github.base_ref, 'latest-devel') || 
-          contains(github.ref, 'latest-devel')
         with: 
            distrib: community # fsf fails on Windows
 
       - uses: alire-project/setup-alire@latest-devel
-        if: >
-          contains(github.base_ref, 'latest-devel') || 
-          contains(github.ref, 'latest-devel')
 
       - run: alr version
