--- a/.github/workflows/sanitycheck.yml
+++ b/.github/workflows/sanitycheck.yml
@@ -7,10 +7,18 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+
     runs-on: ${{ matrix.os }}
+
     steps:
+      # Needed for the script in next step
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          # We need the whole history
+
       # See comment below about merging-devel
-      - run: scripts/matching-branches.sh
+      - run: ./scripts/matching-branches.sh
 
       # setup-alire@latest-devel requires a GNAT compiler
       - uses: ada-actions/toolchain@ce2020
@@ -19,7 +27,8 @@ jobs:
 
       # To be able to test the commit being submitted, a secondary branch
       # pointing to it must be created. Cumbersome but I cannot think of
-      # another way that allows selftest of the yet-to-be-merged commit. The
+      # another way that allows selftest of the yet-to-be-merged commit, as GHA
+      # doesn't fly with something like setup-alire@${{ github.sha }}. The
       # matching-branches step ensures that the branches match though, so you
       # cannot forget about it.
       - uses: alire-project/setup-alire@merging-devel
