--- a/.github/workflows/sanitycheck-commit.yml
+++ b/.github/workflows/sanitycheck-commit.yml
@@ -1,13 +1,18 @@
 name: Sanity check
 
-on: [push, pull_request]
+on: 
+  push:
+    branches:
+      - latest-stable
 
 jobs:
   sanity-check:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+
     runs-on: ${{ matrix.os }}
+
     steps:
       - uses: alire-project/setup-alire@latest-stable
       - run: alr version
