--- a/.github/workflows/sanitycheck.yml
+++ b/.github/workflows/sanitycheck.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/github-script@v3
         with:
           script: |
-            core.setFailed('PRs for latest-stable must come from next-latest-stable')
+            core.setFailed('PRs for latest-stable must come from next-latest-stable, not ${{ github.head_ref }} ')
 
       - uses: alire-project/setup-alire@next-latest-stable
 
