--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "author": "Alire Project",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.6",
-    "@actions/exec": "^1.0.4",
-    "@actions/github": "^4.0.0",
-    "@types/node": "^14.14.27"
+    "@actions/core": "^1.2.7",
+    "@actions/exec": "~1.0.4",
+    "@actions/github": "~4.0.0",
+    "@types/node": "^14.14.45"
   }
 }
