--- a/action.yml
+++ b/action.yml
@@ -15,15 +15,22 @@ inputs:
 runs:
   using: 'composite'
   steps: 
-    - name: Set up GNAT (FSF)
-      if: runner.os == 'Linux'
-      uses: ada-actions/toolchain@ce2021
-      with:
-        distrib: fsf
+#    - name: Set up GNAT (FSF)
+#      if: runner.os == 'Linux'
+#      uses: ada-actions/toolchain@ce2021
+#      with:
+#        distrib: fsf
+#
+#    - name: Set up GNAT (CE)
+#      if: runner.os != 'Linux'
+#      uses: ada-actions/toolchain@ce2021
+#      with:
+#        distrib: community
 
-    - name: Set up GNAT (FSF)
-      if: runner.os != 'Linux'
-      uses: ada-actions/toolchain@ce2021
+    # Until conditionals work in composite actions, we are forced to use always
+    # the CE edition
+    - name: Set up GNAT (CE)
+      uses: ada-actions/toolchain@ce2020 # 2020 required for macOS
       with:
         distrib: community
 
