--- a/.github/workflows/sanitycheck.yml
+++ b/.github/workflows/sanitycheck.yml
@@ -11,6 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -19,8 +20,8 @@ jobs:
         uses: actions/github-script@v3
         with:
           script: |
-            core.setFailed('PRs for latest-stable must come from next-latest-stable, not ${{ github.head_ref }} ')
+            core.setFailed('PRs for latest-stable must come from next-latest-stable')
 
       - uses: alire-project/setup-alire@next-latest-stable
 
-      - run: alr version
+      - run: alr -n version
