--- a/package.json
+++ b/package.json
@@ -1,34 +1,30 @@
 {
-  "name": "node12-template-action",
+  "name": "setup-alire",
   "version": "0.0.0",
   "private": true,
-  "description": "Node 12 template action",
+  "description": "Installer of Alire for github actions",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
     "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/actions/javascript-template.git"
-  },
   "keywords": [
     "actions",
-    "alire1",
+    "alire",
     "setup"
   ],
-  "author": "GitHub",
+  "author": "Alire Developers",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.6",
-    "@actions/tool-cache": "^1.6.1"
+    "@actions/core": "~1.2.7",
+    "@actions/tool-cache": "~1.6.1"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.31",
-    "jest": "^26.6.3",
-    "jest-circus": "^26.6.3",
-    "ts-jest": "^26.5.2",
-    "typescript": "^4.2.2"
+    "@types/jest": "~26.0.24",
+    "@types/node": "~14.14.45",
+    "jest": "~26.6.3",
+    "jest-circus": "~26.6.3",
+    "ts-jest": "~26.5.6",
+    "typescript": "~4.2.4"
   }
 }
