--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "@actions/tool-cache": "^1.7.1"
   },
   "devDependencies": {
-    "@types/jest": "~26.0.24",
-    "@types/node": "~14.14.45",
-    "jest": "~26.6.3",
-    "jest-circus": "~26.6.3",
-    "ts-jest": "~26.5.6",
-    "typescript": "~4.2.4"
+    "@types/jest": "^26.0.24",
+    "@types/node": "^14.17.17",
+    "jest": "^26.6.3",
+    "jest-circus": "^26.6.3",
+    "ts-jest": "^26.5.6",
+    "typescript": "^4.4.3"
   }
 }
