--- a/action.yml
+++ b/action.yml
@@ -4,7 +4,7 @@ author: 'Alire Project'
 
 inputs:
   version:
-    description: Use this argument to install a stable release. Use a version number without v prefix, e.g., 1.0.1, 1.1.0. This argument will be ignored if a branch argument is supplied. Defaults to the latest stable release.
+    description: Use this argument to install a stable or nightly release. Use a version number without v prefix, e.g., 1.0.1, 1.1.0, or 'nightly'. This argument will be ignored if a branch argument is supplied. Defaults to the latest stable release.
     required: false
     default: '1.2.2'
   branch:
@@ -21,5 +21,5 @@ inputs:
     default: ''
 
 runs:
-  using: 'node12'
+  using: 'node16'
   main: 'lib/main.js'
