Implement transparent caching in new version v2 (#42)
Add cache for stable versions

Some more feedback

Updated README

Remove run on push

Don't cache when toolchain in non-default location

This can be added in a later PR

--- a/action.yml
+++ b/action.yml
@@ -16,10 +16,47 @@ inputs:
     required: false
     default: 'gnat_native gprbuild'
   toolchain_dir:
-    description: Location to install the toolchain under.
+    description: Location to install toolchain under.
     required: false
     default: ''
+  cache:
+    description: Whether to reuse a cached previous install. Only works for stable releases with toolchain at default location.
+    required: false
+    default: true
 
 runs:
-  using: 'node16'
-  main: 'lib/main.js'
+  using: "composite"
+  steps:
+    - uses: actions/checkout@v3
+
+    # We don't cache branch builds for now, as this would require to check the head commit
+    - name: Reuse cached installation
+      if: ${{ inputs.cache && inputs.branch == '' && inputs.version != 'nightly' && inputs.toolchain_dir == '' }}
+      id: cache-alr
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cache/alire
+          ~/.config/alire
+          ./alire_install
+        key: alr[${{ inputs.version }}][${{ inputs.toolchain }}][${{ runner.os }}]
+        # .cache contains msys64 install on Windows
+        # .config contains the toolchain at the default location, besides index config
+        # ./alire_install contains alr itself
+
+    # To run the old setup action which is javascript
+    - name: Setup Node
+      uses: actions/setup-node@v3
+      with:
+        node-version: 16
+
+    # Install alr. If found cached it will return without reinstalling (but setting PATH).
+    # We forward inputs as they're bugged for JS in composite actions.
+    - run: node lib/main.js '${{ toJSON(inputs) }}'
+      shell: bash
+
+    # Display result for the record
+    - shell: bash
+      run: |
+        which alr
+        alr --version
