--- a/.github/workflows/sanitycheck.yml
+++ b/.github/workflows/sanitycheck.yml
@@ -1,10 +1,11 @@
-# Changes to the v1 branch must be proposed via PRs in the branch
-# v1-next. This way we can check the action just as GHA is going to
+# Changes to the v2 branch must be proposed via PRs in the branch
+# v2-next. This way we can check the action just as GHA is going to
 # use it.
 
 name: Sanity check for PRs
 
-on: pull_request
+on:
+  pull_request:
 
 jobs:
   sanity-check:
@@ -15,21 +16,14 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - name: Check on proper branch
-        if: github.head_ref != 'v1-next'
+      - name: Check PR comes from proper branch
+        if: github.head_ref != 'v2-next'
         uses: actions/github-script@v3
         with:
           script: |
-            core.setFailed(`PRs for latest-stable must come from v1-next, but branch is ${{ github.head_ref }}`)
+            core.setFailed(`PRs for ${{github.base_ref}} must come from v2-next, but branch is ${{github.head_ref}}`)
 
-      - name: Check latest stable
-        uses: alire-project/setup-alire@v1-next
-
-      - run: alr -n version
-
-      - name: Check nightly
-        uses: alire-project/setup-alire@v1-next
-        with:
-          version: 'nightly'
+      - name: Check action itself
+        uses: alire-project/setup-alire@v2-next
 
       - run: alr -n version
