--- a/.github/workflows/sanitycheck.yml
+++ b/.github/workflows/sanitycheck.yml
@@ -19,13 +19,13 @@ jobs:
 
     steps:
       - name: Check PR comes from proper branch
-        if: false && github.head_ref != 'v2-next'
+        if: github.head_ref != 'v2-next'
         uses: actions/github-script@v3
         with:
           script: |
             core.setFailed(`PRs for ${{github.base_ref}} must come from v2-next, but branch is ${{github.head_ref}}`)
 
       - name: Check action itself
-        uses: mosteo/setup-alire@v2-next
+        uses: alire-project/setup-alire@v2-next
 
       - run: alr -n version
