--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,7 @@ inputs:
     description: Use this argument to install a stable or nightly release. Use a version number without v prefix, e.g., 1.0.1, 1.1.0, or 'nightly'. This argument will be ignored if a branch argument is supplied. Defaults to the latest stable release.
     required: false
     default: '1.2.2'
+    # Also to be updated in test-cache-yml
   branch:
     description: Use this argument to install a development branch (e.g., master). Using this option will require a preexisting compiler in the workflow environment.
     required: false
@@ -46,7 +47,7 @@ runs:
         fi
 
     - name: Reuse cached installation
-      if: ${{ inputs.cache == 'true' && inputs.branch == '' && inputs.version != 'nightly' && inputs.toolchain_dir == '' }}
+      if: ${{ inputs.cache == 'true' && inputs.toolchain_dir == '' }}
       id: cache-alr
       uses: actions/cache/restore@v3
       with:
@@ -62,7 +63,7 @@ runs:
     - name: Check cache output
       shell: bash
       run: |
-        echo Cache hit result: ${{ steps.cache-alr.outputs.cache-hit }}
+        echo Cache hit result: [${{ steps.cache-alr.outputs.cache-hit }}] cache-id: ${{ steps.find-hash.outputs.hash }}
 
     # To run the old setup action which is javascript
     - name: Setup Node
@@ -86,7 +87,7 @@ runs:
     # Save cache early so we can verify its proper working in a test workflow. Otherwise
     # it's not saved until workflow completion and by then it's too late.
     - name: Cache install
-      if: ${{ inputs.cache == 'true' && inputs.branch == '' && inputs.version != 'nightly' && inputs.toolchain_dir == '' }}
+      if: ${{ inputs.cache == 'true' && inputs.toolchain_dir == '' }}
       uses: actions/cache/save@v3
       with:
         path: |
