--- a/.github/workflows/test-cache.yml
+++ b/.github/workflows/test-cache.yml
@@ -2,7 +2,7 @@
 # v2-next. This way we can check the action just as GHA is going to
 # use it.
 
-name: Test cache (stable)
+name: Test cache
 
 on:
   pull_request:
@@ -12,6 +12,15 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        version: ['1.2.2', 'nightly', 'source']
+        branch: ['', 'master']
+        exclude: # These combos are redundant
+          - version: '1.2.2'
+            branch: master
+          - version: nightly
+            branch: master
+          - version: source
+            branch: ''
 
     runs-on: ${{ matrix.os }}
 
@@ -23,11 +32,19 @@ jobs:
           script: |
             core.setFailed(`PRs for ${{github.base_ref}} must come from v2-next, but branch is ${{github.head_ref || github.ref}}`)
 
+      - uses: ada-actions/toolchain@ce2020
+        if: matrix.branch == 'master'
+        with:
+          distrib: community
+
       # This might hit cache
 
       - name: Check action itself
         id: attempt_1
         uses: alire-project/setup-alire@v2-next
+        with:
+          version: ${{matrix.version}}
+          branch: ${{matrix.branch}}
 
       # Next attemp should hit cache given the previous run
 
@@ -35,6 +52,9 @@ jobs:
         if: steps.attempt_1.outputs.cache_hit != 'true'
         id: attempt_2
         uses: alire-project/setup-alire@v2-next
+        with:
+          version: ${{matrix.version}}
+          branch: ${{matrix.branch}}
 
       - shell: bash
         run: |
@@ -48,3 +68,17 @@ jobs:
               core.setFailed('FAIL: No cache hit observed')
 
       - run: alr -n version
+
+      # Verify proper builds
+
+      - run: alr -n version | grep "os:" | grep LINUX
+        if: matrix.os == 'ubuntu-latest'
+        shell: bash
+
+      - run: alr -n version | grep "os:" | grep MACOS
+        if: matrix.os == 'macos-latest'
+        shell: bash
+
+      - run: alr -n version | grep "os:" | grep WINDOWS
+        if: matrix.os == 'windows-latest'
+        shell: bash
