--- a/action.yml
+++ b/action.yml
@@ -65,6 +65,19 @@ runs:
       run: |
         echo Cache hit result: [${{ steps.cache-alr.outputs.cache-hit }}] cache-id: ${{ steps.find-hash.outputs.hash }}
 
+    # Ascertain if we need to install a toolchain for building from sources
+    - name: Find GNAT
+      shell: bash
+      id: find-gnat
+      run: gnat --version && echo "available=true" >> $GITHUB_OUTPUT || echo "available=false" >> $GITHUB_OUTPUT
+
+    # Setup a GNAT if necessary to build from branch
+    - name: Install GNAT
+      if: inputs.branch != '' && steps.find-gnat.outputs.available != 'true' && steps.cache-alr.outputs.cache-hit != 'true'
+      uses: ada-actions/toolchain@ce2020
+      with:
+        distrib: community
+
     # To run the old setup action which is javascript
     - name: Setup Node
       uses: actions/setup-node@v3
