--- a/.github/workflows/test-cache.yml
+++ b/.github/workflows/test-cache.yml
@@ -1,5 +1,5 @@
 # Changes to the v2 branch must be proposed via PRs in the branch
-# v2-next. This way we can check the action just as GHA is going to
+# v3-next. This way we can check the action just as GHA is going to
 # use it.
 
 name: Test cache
@@ -12,9 +12,11 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        version: ['1.2.2', 'nightly', 'source']
+        version: ['2.0.0', '1.2.2', 'nightly', 'source']
         branch: ['', 'master']
         exclude: # These combos are redundant
+          - version: '2.0.0'
+            branch: master
           - version: '1.2.2'
             branch: master
           - version: nightly
@@ -26,17 +28,17 @@ jobs:
 
     steps:
       - name: Check PR comes from proper branch
-        if: (github.head_ref || github.ref) != 'v2-next'
+        if: (github.head_ref || github.ref) != 'v3-next'
         uses: actions/github-script@v3
         with:
           script: |
-            core.setFailed(`PRs for ${{github.base_ref}} must come from v2-next, but branch is ${{github.head_ref || github.ref}}`)
+            core.setFailed(`PRs for ${{github.base_ref}} must come from v3-next, but branch is ${{github.head_ref || github.ref}}`)
 
       # This might hit cache
 
       - name: Check action itself
         id: attempt_1
-        uses: alire-project/setup-alire@v2-next
+        uses: alire-project/setup-alire@v3-next
         with:
           version: ${{matrix.version}}
           branch: ${{matrix.branch}}
@@ -46,7 +48,7 @@ jobs:
       - name: Check action itself
         if: steps.attempt_1.outputs.cache_hit != 'true'
         id: attempt_2
-        uses: alire-project/setup-alire@v2-next
+        uses: alire-project/setup-alire@v3-next
         with:
           version: ${{matrix.version}}
           branch: ${{matrix.branch}}
