--- a/.github/workflows/selftest.yml
+++ b/.github/workflows/selftest.yml
@@ -9,6 +9,7 @@ on: pull_request
 jobs:
   setup-alire:
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         target: [stable, nightly, source]
