--- a/.github/workflows/test-cache.yml
+++ b/.github/workflows/test-cache.yml
@@ -12,17 +12,15 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        version: ['2.0.0', '1.2.2', 'nightly', 'source']
-        branch: ['', 'master']
-        exclude: # These combos are redundant
-          - version: '2.0.0'
-            branch: master
+        config:
+          - version: '2.0.1'
+            branch:  ''
           - version: '1.2.2'
-            branch: master
-          - version: nightly
-            branch: master
-          - version: source
-            branch: ''
+            branch:  ''
+          - version: 'nightly'
+            branch:  ''
+          - version: ''
+            branch:  'master'
 
     runs-on: ${{ matrix.os }}
 
@@ -40,8 +38,8 @@ jobs:
         id: attempt_1
         uses: alire-project/setup-alire@v3-next
         with:
-          version: ${{matrix.version}}
-          branch: ${{matrix.branch}}
+          version: ${{matrix.config.version}}
+          branch: ${{matrix.config.branch}}
 
       # Next attemp should hit cache given the previous run
 
@@ -50,8 +48,8 @@ jobs:
         id: attempt_2
         uses: alire-project/setup-alire@v3-next
         with:
-          version: ${{matrix.version}}
-          branch: ${{matrix.branch}}
+          version: ${{matrix.config.version}}
+          branch: ${{matrix.config.branch}}
 
       - shell: bash
         run: |
