--- a/action.yml
+++ b/action.yml
@@ -6,10 +6,10 @@ inputs:
   version:
     description: Use this argument to install a stable or nightly release. Use a version number without v prefix, e.g., 1.0.1, 1.1.0, or 'nightly'. This argument will be ignored if a branch argument is supplied. Defaults to the latest stable release.
     required: false
-    default: '2.0.0'
+    default: '2.0.1'
     # Also to be updated in test-cache-yml
   branch:
-    description: Use this argument to install a development branch (e.g., master). Using this option will require a preexisting compiler in the workflow environment.
+    description: Use this argument to install a development branch (e.g., master).
     required: false
     default: ''
   toolchain:
