--- a/.github/workflows/test-cache.yml
+++ b/.github/workflows/test-cache.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   sanity-check:
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         config:
