Add new Windows Alire cache path to actions cache (#66)
* Bump undici from 5.28.3 to 5.28.4

Bumps [undici](https://github.com/nodejs/undici) from 5.28.3 to 5.28.4.
- [Release notes](https://github.com/nodejs/undici/releases)
- [Commits](https://github.com/nodejs/undici/compare/v5.28.3...v5.28.4)

---
updated-dependencies:
- dependency-name: undici
  dependency-type: indirect
...

Signed-off-by: dependabot[bot] <support@github.com>

* Add new Windows cache location

* Update outdated dependencies

* Add path to restore action too

* Test toolchain besides alire in cache test

* Allow as many tests as possible to complete

* Test toolchains through `alr exec`

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

--- a/.github/workflows/test-cache.yml
+++ b/.github/workflows/test-cache.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   sanity-check:
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         config:
@@ -62,7 +63,13 @@ jobs:
           script: |
               core.setFailed('FAIL: No cache hit observed')
 
+      # Check alr and default toolchains
       - run: alr -n version
+      - run: |
+          alr -n init --bin alrws
+          cd alrws
+          alr exec -- gnat --version
+          alr exec -- gprbuild --version
 
       # Verify proper builds
 
